@@ -2,6 +2,7 @@ git HEAD
 
     * Improve error message for unparsable (or missing) route data
     * Add option to specify maximum number of connections
+    * efa: add -f / --full-route option
 
 Travel::Routing::DE::VRR 2.04 - Tue Jan 07 2014
 
